<resources>
    <string name="app_name">Klinik</string>
    <string name="langua" >en</string>
    <string name="prefs_file">com.example.loginactivity.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id">348207999605955</string>
    <string name="fb_login_protocol_scheme">fb348207999605955</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_diagnose">Diagnose</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_about">About us</string>
    <string name="menu_syphtoms">Symptoms</string>
    <string name="menu_close">Log Out</string>

    <string name="user">User</string>
    <string name="datos_del_usuario">User data</string>
    <string name="datos_del_dispositivo">Device details</string>
    <string name="detalles_del_dispositivo_label">Device:</string>
    <string name="detalles_del_dispositivo">Device MAC Address</string>
    <string name="detalles_de_version_label">Version:</string>
    <string name="detalles_de_version">Device version</string>
    <string name="detalles_del_Bluetooth_label">Bluetooth:</string>
    <string name="detalles_del_Bluetooth">Bluetooth MAC Address</string>

    <string name="quienes_somos">About us</string>
    <string name="quienes_somos_text">We are a responsible company, created with the aim of facilitating the complicated procedure for our users
        to check our health constantly or when we have a disease, that is why we created this unique mobile application in the market for
        detection of basic diseases that we can have without realizing it or self-medicate without or under the supervision of a doctor
        We are supported by trained physicians who provide us with adequate information for the detection of diseases.
    </string>

    <string name="status">Status</string>
    <string name="pasos">Steps (#)</string>
    <string name="frecuencia_cardiaca_ppm">heartbeat (ppm)</string>
    <string name="bateria_del_dispositivo">Device Battery (%)</string>
    <string name="estatura_cm">Height (cm)</string>
    <string name="peso_kg">Weight (kg)</string>
    <string name="ver_ultimo_diagnostico">Last diagnose</string>
    <string name="nuevo_diagnostico">New diagnose</string>
    <string name="conectar_con_miband">Connect with MiBand</string>
    <string name="acciones">Actions</string>
    <string name="history_text">History</string>
    <string name="symptoms_text">Symptoms</string>
    <string name="selected_symptoms_text">Selected Symptoms</string>
    <string name="diagbutton_text">Diagnose</string>
    <string name="verificacion_otp">Verify OTP</string>
    <string name="enviaremos_un_codigo_de_un_solo_uso_en_este_numero_telefonico">We will send a one-time-password to this mobile number</string>
    <string name="_52">+52-</string>
    <string name="_123456789">123456789</string>
    <string name="recibir_codigo">Receive code</string>
    <string name="ingrese_numero_movil">Write mobile number</string>
    <string name="escriba_el_c_digo_que_le_enviamos">Write the code that we send you to</string>
    <string name="no_recibio_el_c_digo">Didn\'t receive the code?</string>
    <string name="reenviar_otp">RESEND OTP</string>
    <string name="verificar_c_digo">Verify Code</string>
    <string name="diarrea">Diarrhea</string>
    <string name="dificultad_respiratoria">Respiratory Difficulty</string>
    <string name="dificultad_resp_ni_os">Resp. Difficulty Children</string>
    <string name="dolor_abdominal_corto">temporary abdominal pain</string>
    <string name="dolor_abdominal_largo">persistent abdominal pain</string>
    <string name="dolor_en_pecho_lactantes_o_ni_os">Chest pain (Infants or Children)</string>
    <string name="dolor_en_pecho_agudo">Sharp chest pain</string>
    <string name="dolor_en_pecho_cronico">Chronic chest pain</string>
    <string name="dolor_en_parte_baja_de_la_espalda">Lower back pain</string>
    <string name="dolores_de_cabeza">Headaches</string>
    <string name="erupciones_cutaneas_leves_y_cambios">Mild skin rashes and changes</string>
    <string name="fiebre">Fever</string>
    <string name="fiebre_lactantes_o_ni_os">Fever (Infants or Children)</string>
    <string name="hinchazon_de_la_cara">Swelling of the face</string>
    <string name="hinchazon_del_cuello">Swelling of the neck</string>
    <string name="nauseas_y_vomito">Nausea and vomiting</string>
    <string name="nauseas_y_vomito_lactantes_o_ni_os">Nausea and Vomiting (Infants or Children)</string>
    <string name="perdida_del_cabello">Hair loss</string>
    <string name="problemas_al_orinar">Urination problems</string>
    <string name="problemas_de_audicion">Hearing problems</string>
    <string name="problemas_de_eliminacion">Evacuation problems</string>
    <string name="problemas_eliminacion_lactantes_o_ni_os">Evacuation problems (Infants or Children)</string>
    <string name="problemas_de_la_boca">Mouth problems</string>
    <string name="problemas_boca_lactantes_o_ni_os">Mouth problems (Infants or Children)</string>
    <string name="problemas_de_cadera">Hip problems</string>
    <string name="problemas_de_la_garganta">Throat problems</string>
    <string name="problemas_de_mano_mu_eca_o_brazo">Hand, wrist, or arm problems</string>
    <string name="problemas_de_las_piernas">Leg problems</string>
    <string name="problemas_de_los_dientes">Teeth problems</string>
    <string name="problemas_de_los_genitales_en_la_mujer">Genital problems in women</string>
    <string name="problemas_de_los_genitales_en_el_hombre">Genital problems in men</string>
    <string name="problemas_de_los_pies">Foot problems</string>
    <string name="problemas_de_los_tobillos">Ankle problems</string>
    <string name="problemas_de_oido">Hearing problems</string>
    <string name="problemas_de_rodilla">Knee problems</string>
    <string name="problemas_de_ciclo_menstrual">Menstrual cycle problems</string>
    <string name="problemas_del_cuello">Neck problems</string>
    <string name="problemas_del_hombro">Shoulder problems</string>
    <string name="alimentacion_lactantes_o_ni_os">Food (Infants or Children)</string>
    <string name="problemas_tejido_mamario_hombre">Male breast tissue problems</string>
    <string name="problemas_en_senos_mujer">Problems in female breasts</string>
    <string name="resfriados_y_la_gripe">Colds and flu</string>
    <string name="tos">Cough</string>
    <string name="respondiendo_preguntas">Answering questions</string>

</resources>