<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.loginactivity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_symptoms"
        android:name="com.example.loginactivity.ui.symptoms.SymptomsFragment"
        android:label="@string/menu_syphtoms"
        tools:layout="@layout/fragment_symptoms" />

    <fragment
        android:id="@+id/nav_device"
        android:name="com.example.loginactivity.ui.device.DeviceFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_device" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.loginactivity.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.loginactivity.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>