<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerifyOTP"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/folder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/verificacion_otp"
            android:textColor="@color/TextPrimaryOTP"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/escriba_el_c_digo_que_le_enviamos"
            android:textColor="@color/TextSecondaryOTP"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/TextPrimaryOTP"
            android:textSize="14sp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_marginBottom="0dp"
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimaryOTP"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_margin="1dp"
                />
            <EditText
                android:layout_marginBottom="0dp"
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimaryOTP"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_margin="1dp"
                />
            <EditText
                android:layout_marginBottom="0dp"
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimaryOTP"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_margin="1dp"
                />
            <EditText
                android:layout_marginBottom="0dp"
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimaryOTP"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_margin="1dp"
                />
            <EditText
                android:layout_marginBottom="0dp"
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimaryOTP"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_margin="1dp"
                />
            <EditText
                android:layout_marginBottom="0dp"
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimaryOTP"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_margin="1dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_margin="1dp"
                android:layout_marginTop="0dp"
                android:background="@color/DividerOTP"/>
            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_margin="1dp"
                android:layout_marginTop="0dp"
                android:background="@color/DividerOTP"/>
            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_margin="1dp"
                android:layout_marginTop="0dp"
                android:background="@color/DividerOTP"/>
            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_margin="1dp"
                android:layout_marginTop="0dp"
                android:background="@color/DividerOTP"/>
            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_margin="1dp"
                android:layout_marginTop="0dp"
                android:background="@color/DividerOTP"/>
            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_margin="1dp"
                android:layout_marginTop="0dp"
                android:background="@color/DividerOTP"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_recibio_el_c_digo"
                android:textColor="@color/TextSecondaryOTP"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/reenviar_otp"
                android:textColor="@color/purple_500"
                android:textSize="14sp"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_buttonotp"
                android:text="@string/verificar_c_digo"
                android:textColor="@color/WhiteOTP"
                android:textSize="16sp"
                android:textStyle="bold"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />
        </FrameLayout>



    </LinearLayout>
</ScrollView>