<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    tools:context=".ui.about.AboutFragment">

    <ScrollView
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout

                android:id="@+id/tableLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_rounded"
                android:stretchColumns="2">

                <TableRow
                    android:id="@+id/StatDataRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- first element of the row-->

                    <TextView
                        android:id="@+id/StatDataView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="17dp"
                        android:layout_span="3"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_vertical"
                        android:text="@string/quienes_somos"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/DeviceStatRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- first element of the row-->
                    <TextView
                        android:background="@drawable/button_toprounded_white"
                        android:id="@+id/DeviceView"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:paddingTop="8dp"
                        android:layout_span="3"
                        android:fontFamily="sans-serif-black"
                        android:gravity="start"
                        android:paddingStart="25dp"
                        android:paddingEnd="0dp"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:textColor="@color/darkslategrey"
                        android:textSize="20sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/DeviceRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- first element of the row-->

                    <TextView
                        android:background="@drawable/button_bottomrounded_white"
                        android:id="@+id/BluetoothText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:layout_marginEnd="17dp"
                        android:layout_marginBottom="17dp"
                        android:fontFamily="sans-serif-black"
                        android:layout_span="3"
                        android:gravity="start"
                        android:paddingStart="25dp"
                        android:paddingEnd="25dp"
                        android:paddingBottom="8dp"
                        android:text="@string/quienes_somos_text"
                        android:justificationMode="inter_word"
                        android:textStyle="italic"
                        android:textColor="@color/darkslategrey"
                        android:textSize="18sp" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>