<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    tools:context=".ui.symptoms.SymptomsFragment">

    <ScrollView
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout

                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_rounded"
                android:stretchColumns="2">

                <TableRow
                    android:id="@+id/symptDataRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- first element of the row-->

                    <TextView
                        android:id="@+id/symptDataView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="17dp"
                        android:layout_span="3"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_vertical"
                        android:text="@string/symptoms_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </TableRow>
                <ScrollView
                    android:id="@+id/symptLayout"
                    android:layout_width="match_parent"
                    android:layout_height="234dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/button_rounded_menu_border"
                    >
                    <LinearLayout
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:id="@+id/symptLinear"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    </LinearLayout>
                </ScrollView>
            </TableLayout>

            <TableLayout

                android:id="@+id/tableLayout2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_rounded"
                android:stretchColumns="2">

                <TableRow
                    android:id="@+id/selectsymptDataRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- first element of the row-->

                    <TextView
                        android:id="@+id/selectsymptDataView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="17dp"
                        android:layout_span="3"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_vertical"
                        android:text="@string/selected_symptoms_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </TableRow>

                <ScrollView
                    android:id="@+id/selectsymptLayout"
                    android:layout_width="match_parent"
                    android:layout_height="184dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/button_rounded_menu_border"
                    >
                    <LinearLayout
                        android:id="@+id/selectsymptLinear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>
                </ScrollView>
            </TableLayout>

            <TableLayout

                android:id="@+id/tableLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:stretchColumns="2">

                <TableRow
                    android:id="@+id/diagbuttonDataRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- first element of the row-->

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/diagbuttonDataView"
                        android:background="@drawable/button_rounded_menu"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_span="3"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/diagbutton_text"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>